feat: update swagger running docs
